feat: 업체 서비스 수정
전체 조회 서비스 수정